tests/rustdoc-ui/intra-doc/deprecated.stderr
error: unresolved link to `TypeAlias::hoge`
  --> $DIR/deprecated.rs:3:16
   |
LL | #[deprecated = "[broken cross-reference](TypeAlias::hoge)"]
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the link appears in this line:
           
           [broken cross-reference](TypeAlias::hoge)
                                    ^^^^^^^^^^^^^^^
   = note: no item named `TypeAlias` in scope
note: the lint level is defined here
  --> $DIR/deprecated.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unresolved link to `TypeAlias::hoge`
  --> $DIR/deprecated.rs:6:38
   |
LL | #[deprecated(since = "0.0.0", note = "[broken cross-reference](TypeAlias::hoge)")]
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the link appears in this line:
           
           [broken cross-reference](TypeAlias::hoge)
                                    ^^^^^^^^^^^^^^^
   = note: no item named `TypeAlias` in scope

error: unresolved link to `TypeAlias::hoge`
  --> $DIR/deprecated.rs:9:21
   |
LL | #[deprecated(note = "[broken cross-reference](TypeAlias::hoge)", since = "0.0.0")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the link appears in this line:
           
           [broken cross-reference](TypeAlias::hoge)
                                    ^^^^^^^^^^^^^^^
   = note: no item named `TypeAlias` in scope

error: aborting due to 3 previous errors

